feat: changed styling and texts

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="nav">
         <h2>To-do List</h2>
         <div class="user-input">
-          <input id="input" type="text" /><button id="submit">Submit</button>
+          <input id="input" type="text" /><button id="submit">Add task</button>
         </div>
       </div>
     </div>
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="to-do-items"></div>
       <div class="clear-items">
-        <button id="clear-items">Verwijder afgeronde to do's</button>
+        <button id="clear-items">Delete all completed tasks</button>
       </div>
     </div>
 
